Closes S07P12A804-146 Closes S07P12A804-100 피드상세_피드목록 좋아요 북마크버튼(완료) feat: [백] 좋아요, 북마크 여부 API 개발 feat: [프론트]: 피드 좋아요, 북마크 버튼 구현 modify: [프론트]: 피드상세 세부디자인 수정 modify: [백]: 피드이미지 저장안되는 현상 수정

--- a/Troupe/frontend/src/css/modal.module.css
+++ b/Troupe/frontend/src/css/modal.module.css
@@ -22,12 +22,13 @@
     overflow-y: auto;
     -ms-overflow-style: none;
     -webkit-overflow-scrolling: touch;
+    box-shadow: 20px 20px 10px rgba(0,0,0,0.3);
+    border-radius: 7px;
   }
   
   .inner::-webkit-scrollbar{
     display:none;
   }
-
 
   .img {
     background-color: black;
