modify: 전반적인 디자인 수정 및 폰트 추가(개발중)

--- a/Troupe/frontend/src/css/modal.module.css
+++ b/Troupe/frontend/src/css/modal.module.css
@@ -5,6 +5,7 @@
     height: 100%; /*100%*/
     width: 100%; /*100%*/
     background-color: rgba(255, 227, 194,40%);
+    font-family: "SBAggroB";
   }
   
   .inner {
