전반적인 디자인수정 [피드목록, 피드상세, 공연목록, 피드 등록, 버튼들, 비밀번호 변경, 이메일 전송, 로그인, 회원가입]

--- a/Troupe/frontend/src/css/App.css
+++ b/Troupe/frontend/src/css/App.css
@@ -21,7 +21,7 @@
 @font-face {
     font-family: 'SBAggroB';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff') format('woff');
-    font-weight: normal;
+    font-weight: 100;
     font-style: normal;
 }
 
