--- a/Troupe/frontend/src/css/button.module.css
+++ b/Troupe/frontend/src/css/button.module.css
@@ -5,4 +5,29 @@ Button.btn{
   color: white;
   border-radius: 15px;
   margin-top: 10px;
+  font-family: SBAggroB;
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
+
+}
+
+Button.btn2{
+  width: 100px;
+  font-size: 12px;
+  background-color: #66cc66;
+  color: white;
+  border-radius: 15px;
+  margin-top: 10px;
+  font-family: SBAggroB;
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
+}
+
+Button.btn3{
+  width: 100px;
+  font-size: 12px;
+  background-color: #ffd400;
+  color: black;
+  border-radius: 15px;
+  margin-top: 10px;
+  font-family: SBAggroB;
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
 }
