--- a/Troupe/frontend/src/css/tag.module.css
+++ b/Troupe/frontend/src/css/tag.module.css
@@ -9,7 +9,6 @@
     color: #ff6e35;
     border-bottom: 1.6px solid;
     padding: 2px 2px 8px 2px;
-
 }
 .HashWrapOuter {
   display: flex;
@@ -31,6 +30,8 @@
   margin-right: 5px;
   cursor: pointer;
   font-weight: bold;
+  box-shadow:
+  0 10px 30px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.08);
 }
 .HashInput {
   width: auto;
@@ -55,7 +56,7 @@
 .btn1 {
   position: absolute;
   top : -130px;
-  right: 3px;
+  right: 6px;
   /* color: white;
   background-color: red;
   border-radius: 50%;
