--- a/Troupe/frontend/src/css/App.css
+++ b/Troupe/frontend/src/css/App.css
@@ -63,5 +63,8 @@
     /* background-color: white */
     background-color: #EEE3D0;
     /* background-image: linear-gradient(-225deg, #2CD8D5 0%, #C5C1FF 56%, #FFBAC3 100%); */
+    background-image: url("../img/back.jpg");
+    /* background-image: url("../img/4.png"); */
+    background-size: auto
     
 } 
