--- a/Troupe/frontend/src/css/a.module.css
+++ b/Troupe/frontend/src/css/a.module.css
@@ -1,7 +1,7 @@
 a.header {
 	color: black;
 	text-decoration: none;
-	font-family: "yang";
+	font-family: "SBAggroB";
 }
 Button.header {
 	color: black;
