--- a/Troupe/frontend/src/css/button.module.css
+++ b/Troupe/frontend/src/css/button.module.css
@@ -6,10 +6,9 @@ Button.btn{
   border-radius: 15px;
   margin-top: 10px;
   font-family: SBAggroB;
-  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.08);
 
 }
-
 Button.btn2{
   width: 100px;
   font-size: 12px;
@@ -18,7 +17,7 @@ Button.btn2{
   border-radius: 15px;
   margin-top: 10px;
   font-family: SBAggroB;
-  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.08);
 }
 
 Button.btn3{
@@ -30,4 +29,14 @@ Button.btn3{
   margin-top: 10px;
   font-family: SBAggroB;
   box-shadow: 0 10px 35px rgba(0, 0, 0, 0.05), 0 6px 6px rgba(0, 0, 0, 0.3);
+}
+
+Button.btn4{
+  width: 100px;
+  font-size: 12px;
+  background-color: transparent;
+  color: black;
+  border-radius: 15px;
+  margin-top: 10px;
+  font-family: SBAggroB;
 }
