--- a/Troupe/frontend/src/css/tag.module.css
+++ b/Troupe/frontend/src/css/tag.module.css
@@ -43,11 +43,11 @@
   line-height: 3rem;
   margin-top: 80px;
   margin-bottom: 0.75rem;
-  min-width: 14rem;
+  min-width: 28rem;
   border: none;
   background-color: #ffffff;
   color: black;
-  font-family: "Cafe24SsurroundAir";
+  font-family: "SBAggroB";
   font-weight: bold;
   border-radius: 5px;
   box-shadow:
