modify: 공연 상세 UI 수정 및 공연 검색 padding 추가, 메인버튼 UI변경

--- a/Troupe/frontend/src/css/font.module.css
+++ b/Troupe/frontend/src/css/font.module.css
@@ -14,3 +14,15 @@
     left: 6px;
     width: 330px;
 }
+
+.highlighter {
+    background: linear-gradient(to top, #ffd400 30%, #ffffff00 50%);
+  
+}
+.highlighter2 {
+    background: linear-gradient(to top, #66cc66 30%, #ffffff00 50%);
+}
+.highlighter3 {
+    background: linear-gradient(to top, #fda085 30%, #ffffff00 50%);
+   
+}
